# doc/static/swagger/api-staff.yaml
@@ -1,90 +1,104 @@
 openapi: 3.0.0
 info:
-    description: "Signout REST"
-    version: "1.0.0"
-    title: "Signout REST"
-    contact:
-        email: "jon@community-boating.org"
+  description: "Signout REST"
+  version: "1.0.0"
+  title: "Signout REST"
+  contact:
+    email: "jon@community-boating.org"
 paths:
-    /staff/dockhouse/grant-ratings:
-        get:
-          summary: "Grant ratings"
-          responses:
-            "200":
-                description: "Success"
-                content:
-                    application/json:
-                        schema:
-                              $ref: "#/components/schemas/GrantRatingsRequest"
-    /staff/dockhouse/dh-globals:
-        get:
-          summary: "Get DH global values"
-          responses:
-            "200":
-                description: "Success"
-                content:
-                    application/json:
-                        schema:
-                              $ref: "#/components/schemas/DockhouseGlobals"
-    /staff/dockhouse/scan-card:
-        get:
-          summary: "Scan a card to fetch person info"
-          parameters:
-          - in: query
-            name: cardNumber
+  /staff/dockhouse/grant-ratings:
+    get:
+      summary: "Grant ratings"
+      responses:
+        "200":
+          description: "Success"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GrantRatingsRequest"
+  /staff/dockhouse/dh-globals:
+    get:
+      summary: "Get DH global values"
+      responses:
+        "200":
+          description: "Success"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/DockhouseGlobals"
+  /staff/dockhouse/put-flag-change:
+    get:
+      summary: "Get DH global values"
+      responses:
+        "200":
+          description: "Success"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  flagColor:
+                    type: string
+                    enum: [G,Y,R,C]
+  /staff/dockhouse/scan-card:
+    get:
+      summary: "Scan a card to fetch person info"
+      parameters:
+        - in: query
+          name: cardNumber
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: "Success"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CardScanResult"
+  /staff/dockhouse/create-signout:
+    post:
+      summary: "Attempt to create a signout"
+      requestBody:
+        required: true
+        content:
+          application/json:
             schema:
-              type: integer
-          responses:
-            "200":
-                description: "Success"
-                content:
-                    application/json:
-                        schema:
-                              $ref: "#/components/schemas/CardScanResult"
-    /staff/dockhouse/create-signout:
-        post:
-          summary: "Attempt to create a signout"
-          requestBody:
-            required: true
-            content:
-                application/json:
-                  schema:
-                    $ref: "#/components/schemas/CreateSignout"
-          responses:
-            "200":
-                description: "Success"
-                content:
-                    application/json:
-                        schema:
-                              $ref: "#/components/schemas/Signout"
-    /rest/signouts-today:
-        get:
-          summary: "Get today's signouts"
-          responses:
-            "200":
-                description: "Success"
-                content:
-                    application/json:
-                      schema:
-                        type: array
-                        items:
-                          $ref: "#/components/schemas/Signout"
-    /rest/signout:
-        post:
-            summary: "Update a signout"
-            requestBody:
-                required: true
-                content:
-                    application/json:
-                      schema:
-                        $ref: "#/components/schemas/Signout"
-            responses:
-                "200":
-                    description: "Success"
-                    content:
-                        application/json:
-                            schema:
-                                 $ref: "#/components/schemas/Signout"
+              $ref: "#/components/schemas/CreateSignout"
+      responses:
+        "200":
+          description: "Success"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Signout"
+  /rest/signouts-today:
+    get:
+      summary: "Get today's signouts"
+      responses:
+        "200":
+          description: "Success"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Signout"
+  /rest/signout:
+    post:
+      summary: "Update a signout"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Signout"
+      responses:
+        "200":
+          description: "Success"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Signout"
 components:
   schemas:
     GrantRatingsRequest:
@@ -119,130 +133,130 @@ components:
     DockhouseGlobals:
       type: object
       properties:
-        serverDateTime: 
+        serverDateTime:
           type: string
-        sunsetTime: 
+        sunsetTime:
           type: string
-        windSpeedAvg: 
+        windSpeedAvg:
           type: number
-        winDir: 
+        winDir:
           type: string
-        announcements: 
+        announcements:
           type: array
           items:
             $ref: "#/components/schemas/DockhouseAnnouncement"
-        flagChanges: 
+        flagChanges:
           type: array
           items:
             $ref: "#/components/schemas/CardScanResultRating"
     CardScanResultMembership:
       type: object
       properties:
-        assignId: 
+        assignId:
           type: number
-        membershipTypeId: 
+        membershipTypeId:
           type: number
-        startDate: 
+        startDate:
           nullable: true
           type: string
-        expirationDate: 
+        expirationDate:
           nullable: true
           type: string
-        discountName: 
+        discountName:
           nullable: true
           type: string
-        isDiscountFrozen: 
+        isDiscountFrozen:
           type: boolean
-        hasGuestPrivs: 
+        hasGuestPrivs:
           type: boolean
         bannerComment:
           type: string
           nullable: true
         signoutBlockReason:
-          type: string,
+          type: string
           nullable: true
     CardScanResultRating:
       type: object
       properties:
-        ratingId: 
+        ratingId:
           type: number
-        programId: 
+        programId:
           type: number
-        ratingName: 
+        ratingName:
           type: string
-        status: 
+        status:
           type: string
           enum: [Y,F]
     CardScanResult:
       type: object
       properties:
-        personId: 
+        personId:
           type: number
-        cardNumber: 
+        cardNumber:
           type: string
-        nameFirst: 
+        nameFirst:
           type: string
-        nameLast: 
+        nameLast:
           type: string
-        bannerComment: 
+        bannerComment:
           nullable: true
           type: string
-        specialNeeds: 
+        specialNeeds:
           nullable: true
           type: string
-        activeMemberships: 
+        activeMemberships:
           type: array
           items:
             $ref: "#/components/schemas/CardScanResultMembership"
-        personRatings: 
+        personRatings:
           type: array
           items:
             $ref: "#/components/schemas/CardScanResultRating"
     CreateSignoutCrew:
       type: object
       properties:
-        personId: 
+        personId:
           type: number
-        cardNumber: 
+        cardNumber:
           type: string
-        testRatingId: 
+        testRatingId:
           nullable: true
           type: number
     CreateSignout:
       type: object
       properties:
-        skipperPersonId: 
+        skipperPersonId:
           type: number
-        skipperCardNumber: 
+        skipperCardNumber:
           type: string
-        skipperTestRatingId: 
+        skipperTestRatingId:
           nullable: true
           type: number
-        boatId: 
+        boatId:
           type: number
-        sailNumber: 
-          nullable: true
-          type: string
-        hullNumber: 
+        sailNumber:
           nullable: true
           type: string
-        classSessionId: 
+        hullNumber:
+          nullable: true
+          type: string
+        classSessionId:
           nullable: true
           type: number
-        isRacing: 
+        isRacing:
           type: boolean
-        dockmasterOverride: 
+        dockmasterOverride:
           type: boolean
-        didInformKayakRules: 
+        didInformKayakRules:
           type: boolean
-        signoutCrew: 
+        signoutCrew:
           type: array
           items:
             $ref: "#/components/schemas/CreateSignoutCrew"
     Signout:
       type: object
       properties:
-        signoutId: 
+        signoutId:
           type: number
         programId:
           type: number
